Attempt to fix background on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -6,20 +6,15 @@
 }
 body {
   padding: 0;
-  background: #000 url("/images/Hestia_dark.jpg") fixed !important;
+  background: #000 url("/images/Hestia_dark.jpg") !important;
   background-repeat: no-repeat !important;
   background-position: 0% 0% !important;
+  background-attachment: fixed !important;
   background-color: black !important;
-  background-size: cover !important; /*background-color: black;
-      background-position: top center;
-      background-size: cover;
-      background-attachment: fixed;
-      background-repeat: no-repeat;
-      position: absolute;
-      min-width: 100%;
-      width: 100%;
-      min-height: 100%;
-      height: 100%;*/
+  background-size: cover !important;
+  -webkit-background-size: cover !important;
+  -moz-background-size: cover !important;
+  -o-background-size: cover !important;
   z-index: 1;
   font-family: Didot !important;
 }
